# waha-python

./: .gitignore  README.md  openapi.json  pyproject.toml
examples/: download_stickers.py  group_participants.py  send_message.sh
generator/: __init__.py  generate.py
generator/templates/: api_init.py.jinja  api_module.py.jinja  cli_main.py.jinja  cli_module.py.jinja  client.py.jinja  enum.py.jinja  errors.py.jinja  model.py.jinja  models_init.py.jinja  package_init.py.jinja  types.py.jinja  wrapper.py.jinja
